--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ find_package(
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  Distance.msg
+  Output.msg
   )
 
 ## Generate services in the 'srv' folder
